# phonton-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  SECURITY.md  SHIP-v0.20.1.md  package-lock.json  package.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark.md  bug_report.md  failed_task.md
.github/workflows/: ci.yml  nightly.yml  publish-npm.yml  release-binaries.yml
benchmarks/reports/: launch-2026-05-29-phonton-v0.19.7.md
docs/: BENCHMARKS.md  RELEASE_CHANNELS.md  concepts.md  getting-started.md
docs/superpowers/plans/: 2026-05-06-v0.7.0-trust-loop.md  2026-05-07-v0.7.3-context-permissions.md  2026-05-09-v0.9.0-token-history-trust.md  2026-05-17-v0.16.0-context-website-extensions.md  2026-05-21-v0.16.2-benchmark-headless.md
docs/superpowers/specs/: 2026-05-09-v0.9.0-token-history-trust-design.md  2026-05-17-v0.16.0-context-website-extensions-design.md
npm/: install.js  test-wrapper.js
phonton-cli/: Cargo.toml
phonton-cli/src/: ask_context.rs  benchmark_cli.rs  command_runner.rs  config.rs  context_cli.rs  context_mentions.rs  contract_preflight.rs  demo.rs  diff_cli.rs  doctor.rs  extensions_cli.rs  focus.rs  index_cli.rs  main.rs  mcp_cli.rs  memory_cli.rs  plan_preview.rs  prompt_buffer.rs  proof_cli.rs  providers_cli.rs  review.rs  run_command.rs  serve_cli.rs  serve_desktop.rs  store_util.rs  tokens_cli.rs  trust.rs  tui_commands.rs
phonton-cli/tests/: smoke_test.rs
phonton-context/: Cargo.toml
phonton-context/src/: lib.rs
phonton-desktop/: Cargo.toml
phonton-desktop/src/: main.rs
phonton-diff/: Cargo.toml
phonton-diff/src/: lib.rs
phonton-extensions/: Cargo.toml
phonton-extensions/src/: lib.rs
phonton-handoff/: Cargo.toml
phonton-handoff/src/: lib.rs
phonton-index/: Cargo.toml
phonton-index/src/: lib.rs
phonton-index/tests/: integration.rs
phonton-mcp/: Cargo.toml
phonton-mcp/src/: lib.rs
phonton-memory/: Cargo.toml
phonton-memory/src/: lib.rs
phonton-orchestrator/: Cargo.toml
phonton-orchestrator/phonton-types/src/: stub.rs
phonton-orchestrator/src/: lib.rs
phonton-planner/: Cargo.toml
phonton-planner/src/: lib.rs
phonton-providers/: Cargo.toml
phonton-providers/src/: lib.rs  registry.rs
phonton-sandbox/: Cargo.toml
phonton-sandbox/src/: lib.rs
phonton-store/: Cargo.toml
phonton-store/src/: lib.rs
phonton-types/: Cargo.toml
phonton-types/src/: events.rs  extensions.rs  lib.rs  messages.rs  providers.rs
phonton-verify/: Cargo.toml
phonton-verify/src/: browser.rs  lib.rs
phonton-verify/tests/: integration.rs
phonton-worker/: Cargo.toml
phonton-worker/src/: dispatcher.rs  lib.rs  local_templates.rs
phonton-worker/src/templates/: App.css  App.test.tsx  App.tsx  broken_code.py  broken_code.rs  broken_code.ts  chessRules.test.ts  chessRules.ts  config.js  placeholder.spec.ts  receipt.js
release-notes/: v0.10.0.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.12.3.md  v0.12.4.md  v0.12.5.md  v0.12.6.md  v0.12.7.md  v0.13.0.md  v0.13.1.md  v0.13.2.md  v0.13.3.md  v0.13.4.md  v0.13.5.md  v0.14.0.md  v0.14.1.md  v0.15.0.md  v0.15.1.md  v0.15.2.md  v0.15.3.md  v0.15.4.md  v0.15.5.md  v0.16.0.md  v0.16.1.md  v0.16.2.md  v0.17.1.md  v0.19.0.md  v0.19.1.md  v0.19.2.md  v0.19.3.md  v0.19.4.md  v0.19.5.md  v0.19.6.md  v0.19.7.md  v0.20.0.md  v0.20.1.md  v0.21.0.md  (+27 more)
scripts/: benchmark-plan.ps1  install.ps1  install.sh  release-check.ps1  score-benchmark-runs.ps1
