[workspace]
members = [
    "phonton-types",
    "phonton-index",
    "phonton-orchestrator",
    "phonton-planner",
    "phonton-context",
    "phonton-worker",
    "phonton-diff",
    "phonton-verify",
    "phonton-memory",
    "phonton-providers",
    "phonton-sandbox",
    "phonton-store",
    "phonton-cli",
    "phonton-desktop",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/phonton-dev/phonton-cli"
homepage = "https://phonton.dev"
edition = "2021"

[workspace.dependencies]
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
anyhow    = "1"
thiserror = "1"
tracing   = "0.1"
uuid      = { version = "1", features = ["v4", "serde"] }
