[package]
name = "phonton-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phonton"
path = "src/main.rs"

[dependencies]
phonton-types        = { path = "../phonton-types" }
phonton-orchestrator = { path = "../phonton-orchestrator" }
phonton-planner      = { path = "../phonton-planner" }
phonton-store        = { path = "../phonton-store" }
phonton-verify       = { path = "../phonton-verify" }
phonton-providers    = { path = "../phonton-providers" }
phonton-sandbox      = { path = "../phonton-sandbox" }
phonton-diff         = { path = "../phonton-diff" }
phonton-worker       = { path = "../phonton-worker" }
anyhow               = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
async-trait          = "0.1"
ratatui              = "0.28"
crossterm            = "0.28"
serde                = { workspace = true }
serde_json           = "1"
toml                 = "0.8"
dirs                 = "5"

[features]
integration-tests = []

[dev-dependencies]
tempfile = "3"
git2 = "0.18"

