[package]
name = "phonton-cli"
version = "0.13.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local-first agentic development environment CLI for planned, verified, reviewable code changes."
readme = "../README.md"

[[bin]]
name = "phonton"
path = "src/main.rs"

[dependencies]
phonton-types        = { path = "../phonton-types" }
phonton-orchestrator = { path = "../phonton-orchestrator" }
phonton-planner      = { path = "../phonton-planner" }
phonton-store        = { path = "../phonton-store" }
phonton-memory       = { path = "../phonton-memory" }
phonton-verify       = { path = "../phonton-verify" }
phonton-context      = { path = "../phonton-context" }
phonton-providers    = { path = "../phonton-providers" }
phonton-sandbox      = { path = "../phonton-sandbox" }
phonton-diff         = { path = "../phonton-diff" }
phonton-worker       = { path = "../phonton-worker" }
phonton-index        = { path = "../phonton-index", features = ["semantic"] }
phonton-extensions   = { path = "../phonton-extensions" }
phonton-mcp          = { path = "../phonton-mcp" }
anyhow               = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
async-trait          = "0.1"
base64               = "0.22"
ratatui              = "0.28"
crossterm            = { version = "0.28", features = ["bracketed-paste"] }
serde                = { workspace = true }
serde_json           = "1"
toml                 = "0.8"
dirs                 = "5"

[features]
integration-tests = []

[dev-dependencies]
tempfile = "3"
git2 = "0.18"
