[package]
name = "phonton-index"
version = "0.1.0"
edition = "2021"

[dependencies]
phonton-types    = { path = "../phonton-types" }
serde            = { workspace = true }
serde_json       = "1"
tree-sitter      = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
regex = "1"
anyhow    = { workspace = true }
tokio     = { workspace = true }
fastembed = "4"
usearch   = "2"
notify    = "6"

[dev-dependencies]
tempfile  = "3"
