[package]
name = "phonton-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
phonton-types   = { path = "../phonton-types" }
phonton-sandbox = { path = "../phonton-sandbox" }
anyhow          = { workspace = true }
async-trait     = "0.1"
serde           = { workspace = true }
serde_json      = "1"
tokio           = { workspace = true, features = ["io-util", "process", "sync", "macros", "time"] }
reqwest         = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
