[package]
name = "phonton-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
phonton-types  = { path = "../phonton-types" }
phonton-store  = { path = "../phonton-store" }
serde          = { workspace = true }
serde_json     = "1"
tokio          = { workspace = true }
anyhow         = { workspace = true }
