[package]
name = "phonton-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
phonton-types = { path = "../phonton-types" }
tokio = { workspace = true, features = ["process", "time", "rt", "macros"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }
