[package]
name = "phonton-store"
version = "0.1.0"
edition = "2021"

[dependencies]
phonton-types = { path = "../phonton-types" }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = "1"
rusqlite      = { version = "0.31", features = ["bundled"] }
uuid          = { workspace = true }

[dev-dependencies]
tokio         = { workspace = true }
