[package]
name = "phonton-verify"
version = "0.1.0"
edition = "2021"

[features]
integration-tests = []

[dependencies]
phonton-types     = { path = "../phonton-types" }
phonton-memory    = { path = "../phonton-memory" }
anyhow            = { workspace = true }
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = "1"
tree-sitter       = "0.22"
tree-sitter-rust  = "0.21"

[dev-dependencies]
tempfile          = "3"
phonton-store     = { path = "../phonton-store" }
