[package]
name = "phonton-verify"
version = "0.1.0"
edition = "2021"

[features]
integration-tests = []

[dependencies]
phonton-types     = { path = "../phonton-types" }
phonton-memory    = { path = "../phonton-memory" }
anyhow            = { workspace = true }
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = "1"
serde_yaml        = "0.9"
toml              = "0.8"
tree-sitter       = "0.22"
tree-sitter-html  = "0.20"
tree-sitter-python = "0.21"
tree-sitter-rust  = "0.21"
tree-sitter-typescript = "0.21"
tempfile          = "3"

[dev-dependencies]
phonton-store     = { path = "../phonton-store" }
